docs: document query parameters, auth status, ctx subcommands, and wait (#332)
Audit the GitHub Pages docs against the actual CLI surface and close gaps in
the query/reference pages.

- dql-queries: rewrite Additional Parameters to cover every query flag
  (client-context, fetch-timeout-seconds, enforce-query-consumption-limit,
  include-types, include-contributions, metadata field selection, chart
  width/height/fullscreen) with a full reference table; fix three
  documented-but-nonexistent flags (--timeframe, --sampling-ratio, --preview)
  to their real names (--default-timeframe-start/-end, --default-sampling-ratio,
  --enable-preview); add a Waiting for Query Conditions section for wait query.
- command-reference: add wait to the verb table, auth status to the auth
  section, the ctx subcommands (current/describe/set/delete/token), and a
  Wait Commands section.
- configuration: document the full ctx subcommand set.
- live-debugger: fix --decode-snapshots --full to --decode-snapshots=full.

All flag names verified against the built binary.